# shitvpn

./: LICENSE  README.rst  pyproject.toml
pvpn/: crypto.py  enums.py  ip.py  server.py
